--- a/Eventer/views/eventView.html
+++ b/Eventer/views/eventView.html
@@ -26,6 +26,10 @@
             <span class="max-part-count">/</span>
             <span class="max-part-count" data-bind="text: MaxParticipants"></span>
         </div>
+        <div style="background: white; float: left; width: 210px">
+            <img src="http://api.everlive.com/v1/x0JGkn5LGo9RHsjo/Files/835b7d40-480e-11e3-81ba-e551d52aa73d/Download" class="part-pic" />
+            <img src="http://api.everlive.com/v1/x0JGkn5LGo9RHsjo/Files/8fe66570-480e-11e3-9f50-d779695f113f/Download" class="part-pic" />
+        </div>
         
         <!--
         <div class="user-info">
