--- a/Eventer/styles/main.css
+++ b/Eventer/styles/main.css
@@ -512,7 +512,8 @@ textarea
 
 .event-white-box.part{
     text-align: left;
-    float: left;
+    line-height: 50px;
+    height: 50px;
 }
 
 .event-title {
@@ -544,6 +545,7 @@ textarea
     width: 45px;
     height: 45px;
     border-radius: 10px;
+    margin: 4px;
+    margin-bottom: 5px;
     float: left;
-    margin: 5px;
 }
