first working add event

--- a/Eventer/views/addEventView.html
+++ b/Eventer/views/addEventView.html
@@ -12,33 +12,29 @@
         <ul id="add-event-form" data-role="listview" data-style="inset">
             <li>
                 <label for="eventTitle">Name of event</label>
-                <input type="text" id="eventTitle" data-bind="value: Title" required validationMessage="Please choose a name for your event"/>
+                <input type="text" id="eventTitle" data-bind="value: Title"/> <!--required validationMessage="Please choose a name for your event"/-->
             </li>
             <li>
                 <label for="eventStartTime">Date and time</label>
-                <input type="date" id="eventStartTime" data-bind="value: StartTime" required validationMessage="Please choose when your event takes place"/>
+                <input type="date" id="eventStartTime" data-bind="value: StartTime"/> <!--required validationMessage="Please choose when your event takes place"/-->
             </li>
             <li>
                 <span>More info about your event</span>
             </li>
             <li>
                 <label for="eventDescription">Description</label>
-                <textarea type="text" id="eventDescription" data-bind="value: Description"/>
+                <input type="text" id="eventDescription" data-bind="value: Description"/>
             </li>
             <li>
                 <label for="eventMaxParticipants">Limited seats</label>
                 <input type="text" id="eventMaxParticipants" data-bind="value: MaxParticipants"/>
             </li>
             <li>
-                <label for="eventLocationDescription">Password</label>
+                <label for="eventLocationDescription">Where</label>
                 <input type="text" id="eventLocationDescription" data-bind="value: LocationDescription"/>
             </li>
             <li>
-                <label for="eventLocationCoordinates">Password</label>
-                <input type="text" id="eventLocationCoordinates" data-bind="value: LocationCoordinates"/>
-            </li>
-            <li>
-                <label for="eventLocationCoordinates">Password</label>
+                <label for="eventLocationCoordinates">On the map</label>
                 <input type="text" id="eventLocationCoordinates" data-bind="value: LocationCoordinates"/>
             </li>
             <li>
@@ -48,6 +44,6 @@
         </ul>
     </form>
     <div class="event-add-btn">
-        <a class="btn-signup btn-big" data-role="button" data-bind="click: confirmAddEvent">Publish this event</a>
+        <a class="btn-signup btn-big" data-role="button" data-bind="click: saveEvent">Invite to this event</a>
     </div>    
 </div>
