first working add event

--- a/Eventer/views/feedView.html
+++ b/Eventer/views/feedView.html
@@ -3,7 +3,7 @@
         <div data-role="navbar">
             Feed
             <a class="nav-button" data-align="left" data-role="backbutton" data-click="app.viewModels.feed.logout">Log out</a>
-            <a class="nav-button" data-align="right" data-role="button" data-icon="add" href="views/addActivityView.html"></a>
+            <a class="nav-button" data-align="right" data-role="button" data-icon="add" href="views/addEventView.html"></a>
         </div>
     </header>
 
