--- a/Eventer/views/feedView.html
+++ b/Eventer/views/feedView.html
@@ -1,8 +1,9 @@
 <div data-role="view" id="view-all-activities" data-layout="default" class="activities-view" data-model="app.viewModels.feed">
     <header data-role="header">
-        <div data-role="navbar">
-            Feed
-            <a class="nav-button" data-align="right" data-role="button" data-icon="add" href="views/addActivityView.html"></a>
+        <div data-role="navbar" style="top: 10px;">
+            <div class="nav-button"  data-align="left" data-role="button" id="swipe-menu-btn"></div>
+            Event Feed
+            <div class="nav-button"  data-align="right" data-role="button" id="search-btn"></div>
         </div>
     </header>
 
