--- a/Eventer/styles/main.css
+++ b/Eventer/styles/main.css
@@ -1,3 +1,7 @@
+body {
+    font-family: Open Sans !important;
+}
+
 #friendsApp.km-android .km-view
 {
     -moz-box-orient:vertical;
@@ -17,10 +21,7 @@
 }
 #friendsApp.km-ios, #friendsApp.km-ios .km-content, #friendsApp.km-android, #friendsApp.km-android .km-content
 {
-    background-image: url(images/app-bg.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: #4b2113;
+    background-color: #fff;
 }
 #friendsApp.km-ios .form-view .km-listinset, #friendsApp.km-android .form-view .km-listinset
 {
@@ -33,19 +34,7 @@
     border-color: rgba(255,255,255,.5);
     
 }
-.b-top
-{
-    background: transparent url(images/border.png) repeat-x 0 0;
-}
-.b-bottom
-{
-    background: transparent url(images/border.png) repeat-x 0 100%;
-}
-.b-top, .b-bottom
-{
-    background-repeat: repeat-x;
-    background-color: transparent;    
-}
+
 /* Buttons */
 #friendsApp.km-android .km-leftitem
 {
@@ -54,10 +43,6 @@
 #friendsApp.km-android .km-rightitem
 {
     right: 0;
-}
-#friendsApp.km-ios .km-button, #friendsApp.km-android .km-button
-{
-    background-color: #ff6c00;
 }
 #friendsApp.km-ios .km-button, #friendsApp.km-ios .km-back::before
 {
@@ -141,9 +126,8 @@
 /*App Header*/
 #friendsApp.km-ios .km-navbar
 {
-    background-image: none;   
-    background-color: rgba(0,0,0,0.2);
-    border-bottom: 1px solid #a78675;
+    background-color: #fff;
+    border-bottom: 1px solid #ccc;
 }
 #friendsApp.km-ios .km-view-title
 {
@@ -163,6 +147,11 @@
     border-bottom: 2px solid #fe8a3d;   
     line-height: 1.2;
 }
+
+.km-ios .km-view-title, .km-ios .km-dialog-title {
+    color: #000 !important;
+}
+
 .km-root #friendsApp.km-android .km-navbar
 {
     padding-right: 0;   
@@ -188,7 +177,7 @@
 {
     padding: 1.1em 0;
     text-align: center;
-    color: #999;    
+    color: #999; 
 }
 #friendsApp.km-ios .welcome-scrn .km-footer
 {
@@ -548,4 +537,25 @@ textarea
     margin: 4px;
     margin-bottom: 5px;
     float: left;
+}
+
+#swipe-menu-btn {
+    background-color: #fff;
+    background-image: none;
+    background-repeat: no-repeat;
+    background-size: 15px 10px;
+    background-image: url(images/icons/menu_icon.png);
+    border-radius: 0px;
+    left: 10px;
+    top: 8px;
+}
+
+#search-btn {
+    background-color: #fff;
+    background-image: none;
+    background-repeat: no-repeat;
+    background-size: 13px 12px;
+    background-image: url(images/icons/mag_icon.png);
+    border-radius: 0px;
+    top: 8px;    
 }
