Use top-bar buttons for add-event Done

--- a/Eventer/views/addEventView.html
+++ b/Eventer/views/addEventView.html
@@ -2,9 +2,9 @@
     data-init="app.viewModels.addEvent.init" data-show="app.viewModels.addEvent.show">
     <header data-role="header">
         <div data-role="navbar">
-            Activity
+            Add Event
             <a class="nav-button" data-align="left" data-role="backbutton">Cancel</a>
-            <a class="nav-button" data-align="right" data-role="button" data-bind="click: saveActivity">Post</a>
+            <a class="nav-button" data-align="right" data-role="button" data-bind="click: saveEvent">Done</a>
         </div>
     </header>
     
@@ -43,7 +43,4 @@
             </li>
         </ul>
     </form>
-    <div class="event-add-btn">
-        <a class="btn-signup btn-big" data-role="button" data-bind="click: saveEvent">Invite to this event</a>
-    </div>    
 </div>
