Better Add Event view

--- a/Eventer/views/feedView.html
+++ b/Eventer/views/feedView.html
@@ -4,6 +4,7 @@
             <div class="nav-button"  data-align="left" data-role="button" id="swipe-menu-btn"></div>
             Event Feed
             <div class="nav-button"  data-align="right" data-role="button" id="search-btn"></div>
+            <a class="nav-button" data-align="right" data-role="button" href="views/addEventView.html">Add</a>
         </div>
     </header>
 
