Don't show empty blocks if there is no image

--- a/Eventer/views/feedView.html
+++ b/Eventer/views/feedView.html
@@ -24,7 +24,7 @@
             <time class="timeSpan">${StartTimeFormatted()}</time>
         </div>
         <div>
-			<img src="${CoverImageURL()}" style="width: 292px; height: 140px;" />
+			<img src="${CoverImageURL()}" style="width: 292px; height: 140px; display:${CoverImageDisplay()}}" />
 		</div>
         <div class="user-share">
             <a class="user-share-txt">${Description}</a>
