--- a/Eventer/views/feedView.html
+++ b/Eventer/views/feedView.html
@@ -3,7 +3,7 @@
         <div data-role="navbar" style="top: 10px;">
             <div class="nav-button"  data-align="left" data-role="button" id="swipe-menu-btn"></div>
             Event Feed
-            <a class="nav-button" data-align="right" data-role="button" id="search-btn" href="views/addEventView.html"></a>
+            <a class="nav-button" data-align="right" data-role="button" id="add-new-btn" href="views/addEventView.html"></a>
         </div>
     </header>
 
